syntax = "proto3";
package messageAct;
option go_package = "tinytiktok/user/proto/messageAct";

message MessageActionRequest {
  string token = 1; // 用户鉴权token
  int64 user_id = 2; // 用户id
  int64 to_user_id = 3; // 对方用户id
  string content = 4; // 消息内容
  int64 action_type = 5; // 1-发送消息
}

message MessageActionResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}